--- a/Week 2 - Intro Datatypes and Structures/py-w2-instr.ipynb
+++ b/Week 2 - Intro Datatypes and Structures/py-w2-instr.ipynb
@@ -900,7 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Create a for loop that transfers all the scores in class_scores into an array of letter grades. (Hint: create an empty list first, and then add later! Reuse the code that shown above!)"
+    "3. Create a for loop that transfers all the scores in class_scores into an array of letter grades. (Hint: create an empty list first, and then append later! Reuse the code that shown above!)"
    ]
   },
   {
