--- a/Week 2 - Intro Datatypes and Structures/py-w2-student.ipynb
+++ b/Week 2 - Intro Datatypes and Structures/py-w2-student.ipynb
@@ -787,7 +787,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Create a for loop that transfers all the scores in class_scores into a list of letter grades. (Hint: create an empty list first, and then add later! Reuse the code that shown above!)"
+    "3. Create a for loop that transfers all the scores in class_scores into a list of letter grades. (Hint: create an empty list first, and then append later! Reuse the code that shown above!)"
    ]
   },
   {
